Fix: logo spacing in discussions

--- a/frontend/styles/components/DiscussionItem.less
+++ b/frontend/styles/components/DiscussionItem.less
@@ -73,6 +73,16 @@
         padding-right: @space-m;
         // padding-bottom: @space-s;
 
+        &.workspace {
+          a {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+          }
+          img {
+            margin-right: @space-s;
+          }
+        }
         &.participants {
           & > span {
             margin-right: @space-s;
